# bb_troubleshooter_chatbot

./: .gitignore  app_stream.py  main.py  pyproject.toml  rough_work.ipynb
config/: config.yaml  transformation_config.yaml
knowledge_folder/: llm_field_descriptions.csv
knowledge_folder/datapoints/DE_baseline_router_data/: part-00000-61a33132-17cf-4647-8fc0-0bed20f4b722-c000.snappy.parquet  part-00001-61a33132-17cf-4647-8fc0-0bed20f4b722-c000.snappy.parquet  part-00002-61a33132-17cf-4647-8fc0-0bed20f4b722-c000.snappy.parquet  part-00003-61a33132-17cf-4647-8fc0-0bed20f4b722-c000.snappy.parquet  part-00004-61a33132-17cf-4647-8fc0-0bed20f4b722-c000.snappy.parquet  part-00005-61a33132-17cf-4647-8fc0-0bed20f4b722-c000.snappy.parquet  part-00006-61a33132-17cf-4647-8fc0-0bed20f4b722-c000.snappy.parquet  part-00007-61a33132-17cf-4647-8fc0-0bed20f4b722-c000.snappy.parquet  part-00008-61a33132-17cf-4647-8fc0-0bed20f4b722-c000.snappy.parquet  part-00009-61a33132-17cf-4647-8fc0-0bed20f4b722-c000.snappy.parquet  (+2 more)
utils_kk/: llm_initializations.py
utils_kk/branching/: branch_control.py
utils_kk/misl_function/: misl_getData.py  misl_loadPrompt.py
utils_kk/nodes/: node_chitChat.py  node_intentClassification.py  node_pandasProcessing.py  node_rca.py
utils_kk/prompts/: prompts_chitChat.py  prompts_chitChat.yml  prompts_intentClassification.py  prompts_intentClassification.yml  prompts_pandasAgent.py  prompts_pandasAgent.yml  prompts_rca.py
utils_kk/tool_functions/: data_transformer.py  tool_calling_funcs.py
utils_kk/variables/: variable_definitions.py
(+42 files in other folders)
